Fixes for nav spacing

--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -1,11 +1,11 @@
 // NavBar Styles
 .navbar .navbar-menu
-  margin-top: 60px
+  margin-top: 20px
   box-shadow:none !important
 
 .navbar-brand 
   flex: 0 1 auto
-  height: 200px
+  height: 130px
   position: absolute             
   left: 50%
   margin-top: 4px
